# MEL

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/.workflows/: ci.yml
adapters/text_llm/: adapter.py
python/examples/: chat_cli.py  round_trip_demo.py  router_config.toml
python/mel/: __init__.py  cli.py  mel_bridge.py  mel_validate.py  messages.py  router_client.py  router_server.py  runtime.py
python/mel/data/: mel.schema.json
python/training/: build_dataset.py  infer_compile.py  prep_tokenizer.py  train_align.py  train_wave_small.py
spec/: mel.schema.json
spec/examples/: detect_request.json  qa_request.json  qa_result.json
tests/: conftest.py  test_messages.py  test_round_trip.py  test_router_echo.py  test_runtime.py  test_schema.py
tools/: make_help.py
wave_small_mel_align/: config.json  tokenizer.json
wave_small_mel_align/checkpoint-50/: added_tokens.json  rng_state.pth  special_tokens_map.json  tokenizer_config.json  trainer_state.json
